<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="search_label">aFreeRDP</string>
    <string name="search_settings_description">Remote Computers</string>

    <string name="rdp_main_title">Windows 远程桌面</string>
    <string name="rdp_main_group">默认组</string>
    <string name="rdp_main_list_empty">您还未连接过任何远程桌面</string>
    <string name="rdp_main_add_now">立即添加</string>

    <!--添加或编辑界面-->
    <string name="rdp_add_title">添加远程 Windows</string>
    <string name="rdp_add_edit_title">编辑远程 Windows</string>

    <string name="rdp_add_label">Windows 标签</string>
    <string name="rdp_add_label_empty">标签不能为空</string>
    <string name="rdp_add_label_default">默认标签</string>
    <string name="rdp_add_label_hint">设置标签便于识别</string>
    <string name="rdp_add_label_required">请输入一个标签</string>

    <string name="rdp_add_group">Windows 分组</string>
    <string name="rdp_add_group_default">默认分组</string>
    <string name="rdp_add_group_empty">分组名称不能为空</string>
    <string name="rdp_add_group_hint">保存至分组以方便管理</string>

    <string name="rdp_add_ip">Windows IP地址或域名</string>
    <string name="rdp_add_ip_empty">IP或域名不能为空</string>
    <string name="rdp_add_ip_hint">例：192.168.0.1</string>
    <string name="rdp_add_ip_required">请输入远程地址或域名</string>

    <string name="rdp_add_domain">Windows 域</string>
    <string name="rdp_add_domain_empty">未设置域请留空</string>

    <string name="rdp_add_port">Windows Rdp 端口</string>
    <string name="rdp_add_port_empty">端口不能为空</string>
    <string name="rdp_add_port_default">3389</string>
    <string name="rdp_add_port_hint">请输入远程RDP端口，默认3389</string>

    <string name="rdp_add_account">Windows 用户名</string>
    <string name="rdp_add_account_empty">用户名不能为空</string>
    <string name="rdp_add_account_hint">例：Administrator</string>
    <string name="rdp_add_account_required">请输入远程用户名</string>

    <string name="rdp_add_password">Windows 密码</string>
    <string name="rdp_add_password_empty">未设置密码请留空</string>
    <string name="rdp_add_password_hint">Windows 密码</string>

    <string name="rdp_add_success">远程 Windows 保存成功</string>
    <string name="rdp_add_setting">连接设置</string>
    <string name="rdp_add_setting_screen">屏幕设置</string>>
    <string name="rdp_add_setting_screen_message">色彩深度和分辨率相关设置</string>
    <string name="rdp_add_setting_performance">性能设置</string>
    <string name="rdp_add_setting_performance_message">桌面性能和速度相关设置</string>
    <string name="rdp_add_setting_advance">高级设置</string>
    <string name="rdp_add_setting_advance_message">高级功能相关设置</string>

    <!-- Debug 设置 -->
    <string name="rdp_add_setting_debug">调试设置</string>
    <string name="rdp_add_setting_debug_message">开发人员调试相关设置</string>
    <string name="rdp_add_setting_debug_level">调试等级</string>
    <string name="rdp_add_setting_debug_async_channel">Async Channel</string>
    <string name="rdp_add_setting_debug_async_input">Async Input</string>
    <string name="rdp_add_setting_debug_async_update">Async Update</string>
    <string name="rdp_add_setting_debug_async_transport">Async Transport</string>
    <string name="rdp_add_setting_debug_console_mode">控制台模式</string>
</resources>